# pieceoftheloaf.github.com

./: README.md  body-video.html  index.html  nbc-video.html
hymnal/: .classpath  .hgignore  .hgtags  .project  .scala_dependencies  TODO
hymnal/download/abcplus_en-1.1.0/: accomp.mid  amazinggrace.mid  broken.mid  folia.mid  garota.mid  manfrina.mid  riff.mid  swallowtail.mid
hymnal/download/open_hymnal/: A_Mighty_Fortress_Is_Our_God-Ein_Feste_Burg_Rhythmic.abc  AllCreaturesOfOurGodAndKing.abc  AllDependsOnOurPossessing.abc  All_Glory_Laud_And_Honor-Valet_Will_Ich_Dir_Geben-St_Theodulph.abc  All_Hail_The_Power_Of_Jesus_Name-Coronation.abc  AlleluiaSingToJesus.abc  Almighty_God_Your_Word_Is_Cast-St_Anne.abc  Amazing_Grace-New_Britain.abc  Angel_Voices_Ever_Singing-Angel_Voices_Monk.abc  AngelsWeHaveHeardOnHigh.abc  Angels_From_The_Realms_Of_Glory-Regent_Square.abc  Awake_My_Soul_And_With_The_Sun-Old_100th.abc  Away_In_A_Manger-Mueller.abc  Beautiful_Savior-Crusaders_Hymn.abc  Behold_A_Host_Arrayed_In_White-Den_Store_Hvide_Flok-Great_White_Host.abc  By_Grace_Im_Saved-O_Dass_Ich_Tansend_Zungen.abc  Canon.abc  Christ_Arose-Christ_Arose.abc  CrownHimWithManyCrowns.abc  Despair_Not_O_Heart-Med_Sorgen_Og_Klagen-Despair_Not_O_Heart-Jam_Moesta-Iam_Moesta.abc  Did_You_Think_To_Pray-Stockbridge.abc  Faith_Of_Our_Fathers-St_Catherine.abc  ForAllTheSaints.abc  ForTheBeautyOfTheEarth.abc  From_Heaven_Above-Vom_Himmel_Hoch.abc  GabrielsMessage.abc  God_Rest_Ye_Merry_Gentlemen-God_Rest_Ye_Merry_Gentlemen.abc  God_Whose_Almighty_Word-Italian_Hymn.abc  Good_King_Wenceslas-Tempus_Adest_Floridum.abc  Guide_Me_O_Thou_Great_Jehovah-Cwm_Rhondda.abc  HarkTheHeraldAngelsSing.abc  HarkTheVoiceOfJesusCalling.abc  He_Leadeth_Me-He_Leadeth_Me.abc  He_Who_Would_Valiant_Be-Monks_Gate.abc  HolyGodWePraiseThyName.abc  HolyHolyHoly.abc  Holy_Ghost_With_Light_Divine-Canterbury-Song_13.abc  Hosanna_Loud_Hosanna-Ellacombe.abc  How_Firm_A_Foundation-Foundation-Protection.abc  How_Shall_We_Answer_Terrors_Cry-Melita.abc  (+53 more)
hymnal/download/songs-2.11/: Makefile  Makefile.in  NEWS  README  config.status  configure  configure.in
hymnal/download/songs-2.11/m4/: ac_path_vimfiles.m4  ac_prog_vim.m4  ac_texmf_path.m4
hymnal/download/songs-2.11/sample/: GNUmakefile  cbauth.sbx  cbscrip.sbx  chordbook.aux  chordbook.tex  lbtitle.sbx  lyricbook.aux  lyricbook.out  lyricbook.tex  slidebook.tex  songs.sbd  transparencies.tex
hymnal/download/songs-2.11/src/: config.h  config.h.in
hymnal/download/songs-2.11/src/sbdchk/: Makefile  Makefile.in  chars.h  extract.c  report.c  sbdchk  sbdchk.c  sbdchk.h
hymnal/download/songs-2.11/src/sbdchk/.deps/: sbdchk-extract.Po  sbdchk-report.Po  sbdchk-sbdchk.Po
hymnal/download/songs-2.11/src/songidx/: Makefile  Makefile.in  authidx.c  bible.can  catholic.can  chars.h  fileio.c  fileio.h  greek.can  protestant.can  scripidx.c  songidx  songidx.c  songidx.h  songsort.c  tanakh.can  titleidx.c
hymnal/download/songs-2.11/src/songidx/.deps/: songidx-authidx.Po  songidx-fileio.Po  songidx-scripidx.Po  songidx-songidx.Po  songidx-songsort.Po  songidx-titleidx.Po
hymnal/download/songs-2.11/src/songs/: GNUmakefile  GNUmakefile.in  songs.aux  songs.dtx  songs.glo  songs.gls  songs.idx  songs.ilg  songs.ind  songs.ins  songs.out  songs.sty
hymnal/download/songs-2.11/src/vim/: Makefile  Makefile.am  Makefile.in
hymnal/download/songs-2.6/: Makefile  Makefile.am  (+6 more)
hymnal/hymnal-src/: contents-full.txt  contents-sample.txt  contents-src.txt  contents.txt  convert.pl  copyright-status.txt  musician-songs.html  proofread.txt  small_sample.html
studies/: build.xml  project.properties  userdict.txt
studies/DocBook-Framework-1.0/: build-docbook.xml  docbook.properties
(+361 files in other folders)
